@@ -3,9 +3,10 @@ package Padre::Task::PPI::FindUnmatchedBrace;
 use 5.008;
 use strict;
 use warnings;
-use Padre::Wx                             ();
-use Padre::Task::PPI                      ();
+
 use PPIx::EditorTools::FindUnmatchedBrace ();
+use Padre::Task::PPI                      ();
+use Padre::Util                           ('_T');
 
 our $VERSION = '0.53';
 our @ISA     = 'Padre::Task::PPI';
@@ -75,10 +76,9 @@ sub finish {
 		# GUI update
 		$self->{main_thread_only}->{document}->ppi_select( $self->{bad_element} );
 	} else {
-		Wx::MessageBox(
-			Wx::gettext("All braces appear to be matched"),
-			Wx::gettext("Check Complete"),
-			Wx::wxOK, Padre->ide->wx->main
+		Padre->ide->wx->main->message(
+			_T("All braces appear to be matched"),
+			_T("Check Complete")
 		);
 	}
 	return ();
