@@ -3,9 +3,10 @@ package Padre::Task::PPI::IntroduceTemporaryVariable;
 use 5.008;
 use strict;
 use warnings;
-use Padre::Wx                                     ();
-use Padre::Task::PPI                              ();
+
 use PPIx::EditorTools::IntroduceTemporaryVariable ();
+use Padre::Util                                   ('_T');
+use Padre::Task::PPI                              ();
 
 our $VERSION = '0.53';
 our @ISA     = 'Padre::Task::PPI';
@@ -100,16 +101,13 @@ sub finish {
 	} else {
 		my $text;
 		if ( $self->{error} =~ /no token/ ) {
-			$text = Wx::gettext("First character of selection does not seem to point at a token.");
+			$text = _T("First character of selection does not seem to point at a token.");
 		} elsif ( $self->{error} =~ /no statement/ ) {
-			$text = Wx::gettext("Selection not part of a Perl statement?");
+			$text = _T("Selection not part of a Perl statement?");
 		} else {
-			$text = Wx::gettext("Unknown error");
+			$text = _T("Unknown error");
 		}
-		Wx::MessageBox(
-			$text,    Wx::gettext("Replace Operation Canceled"),
-			Wx::wxOK, Padre->ide->wx->main
-		);
+		Padre->ide->wx->main->message($text, _T("Replace Operation Canceled"));
 	}
 	return ();
 }
