@@ -3,6 +3,8 @@ Changes for Perl Application Development and Refactoring Environment
 0.54 To Be Released
     - If all files are closed, the function list would ->Hide itself
       permanently and never come back. Resolved (ADAMK)
+    - All the menues inc. the right click menu became actions (SZABGAB)
+    - Lots of Wx::gettext calls replaced by _T() (SZABGAB)
 
 0.53 2009.12.23
     - Add initial version of a debugger using Debug::Client (SZABGAB)
